assets/scss/_page.scss
body {
	color:  white;
	position: relative;
	background-color: #212121;
}

@each $header-bg-color, $modificator
in 	(#D85336, first),
	(#E9C92D, second),
	(#75AD2B, third),
	(#4A148C, fourth) {
		.headline--#{$modificator} {
			background-color: $header-bg-color;
		}
	}

%text {
	line-height: 24px;
	font-size: 20px;
	padding: 0 10px;
}

.container {
	max-width: 700px;
	margin: 0 auto;
}

.headline {
	text-align: center;
	position: relative;
	z-index: 2;
	&__text {
		margin: 0;
		line-height: 24px;
		font-size: 24px;
		padding: 28px 0;
	}
}

.info {
	&__text {
		@extend %text;
		&--key {
			color: #9BCA3E;
		}
	}
}

#sticky {
	position: fixed;
	width: 100%;
	top: 0;
	z-index: 3;
	text-align: center;
	backface-visibility: hidden;
}

.placeholder {
	min-height: 130px;
	&__text {
		@extend %text;
	}
	&__headline {
		text-align: center;
		text-transform: uppercase;
	}
}

.github {
	background-color: orange;
	width: 100%;
	&__link {
		display: block;
		text-align: center;
		padding: 20px;
	}
	&__img {
		height: 40px;
	}
}

